# libsoup-gi

libsoup/: Makefile  Makefile.am
